Fix fav button contrast

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -112,7 +112,7 @@ button {
   font-size: 30px;
   border: none;
   background-color: transparent;
-  color: white;
+  color: rgb(57, 57, 74);
 }
 
 .grid-container {
